--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
         <meta http-equiv="refresh" content="0; url=https://cricpk.xyz/">
         <script type="text/javascript">
-            window.location.href = "https://cricpk.xyz/"
+            window.location.href = "https://t.me/+O6udHr4hogtiNzc1"
         </script>
         <title>Page Redirection</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='https://cricpk.xyz/'>link to example</a>.
+        If you are not redirected automatically, follow this <a href='https://t.me/+O6udHr4hogtiNzc1'>link to example</a>.
     </body>
 </html>
